tests/invalid/undefined_variable_in_assertion_reference.esm
{
  "esm": "0.8.0",
  "metadata": {
    "name": "UndefinedVariableInAssertionReference",
    "description": "Invalid: an undefined variable inside a test assertion's `reference` expression (\u00a76.6.3). Reference integrity must apply to EVERY expression-bearing field, not just `equations` (esm-spec \u00a74.9.5). `y` and `k` are declared; the ONLY defect is the undefined name `undefined_xyz`. The file is schema-valid, so it reaches structural validation (CONFORMANCE_SPEC \u00a77.1.2). Expected error: undefined_variable @ /models/TestModel/tests/0/assertions/0/reference.",
    "authors": [
      "EarthSciML"
    ],
    "created": "2026-07-14T00:00:00Z"
  },
  "models": {
    "TestModel": {
      "variables": {
        "y": {
          "type": "state",
          "units": "1",
          "description": "State."
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 1.0,
          "description": "Declared parameter."
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "y"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              {
                "op": "-",
                "args": [
                  "k"
                ]
              },
              "y"
            ]
          }
        }
      ],
      "tests": [
        {
          "id": "t0",
          "time_span": {
            "start": 0.0,
            "end": 1.0
          },
          "assertions": [
            {
              "variable": "y",
              "time": 1.0,
              "expected": 0.0,
              "reference": {
                "op": "*",
                "args": [
                  "k",
                  "undefined_xyz"
                ]
              }
            }
          ]
        }
      ]
    }
  }
}
